@@ -16,25 +16,23 @@
  */
 package org.apache.solr.core;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
+import java.io.Reader;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.solr.cloud.CloudDescriptor;
 import org.apache.solr.cloud.ZkController;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.PropertiesUtil;
+import org.apache.solr.common.util.StrUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -93,20 +91,19 @@ public class CoreDescriptor {
     return originalExtraProperties;
   }
 
-  private static ImmutableMap<String, String> defaultProperties =
-      new ImmutableMap.Builder<String, String>()
-          .put(CORE_CONFIG, "solrconfig.xml")
-          .put(CORE_SCHEMA, "schema.xml")
-          .put(CORE_CONFIGSET_PROPERTIES, ConfigSetProperties.DEFAULT_FILENAME)
-          .put(CORE_DATADIR, "data" + File.separator)
-          .put(CORE_TRANSIENT, "false")
-          .put(CORE_LOADONSTARTUP, "true")
-          .build();
+  private static final Map<String, String> defaultProperties =
+      Map.of(
+          CORE_CONFIG, "solrconfig.xml",
+          CORE_SCHEMA, "schema.xml",
+          CORE_CONFIGSET_PROPERTIES, ConfigSetProperties.DEFAULT_FILENAME,
+          CORE_DATADIR, "data" + File.separator,
+          CORE_TRANSIENT, "false",
+          CORE_LOADONSTARTUP, "true");
 
-  private static ImmutableList<String> requiredProperties = ImmutableList.of(CORE_NAME);
+  private static final List<String> requiredProperties = List.of(CORE_NAME);
 
-  public static ImmutableList<String> standardPropNames =
-      ImmutableList.of(
+  public static List<String> standardPropNames =
+      List.of(
           CORE_NAME,
           CORE_CONFIG,
           CORE_DATADIR,
@@ -214,9 +211,11 @@ public class CoreDescriptor {
       if (isUserDefinedProperty(propname)) originalExtraProperties.put(propname, propvalue);
       else originalCoreProperties.put(propname, propvalue);
 
-      if (!requiredProperties.contains(propname)) // Required props are already dealt with
-      coreProperties.setProperty(
+      // Required props are already dealt with
+      if (!requiredProperties.contains(propname)) {
+        coreProperties.setProperty(
             propname, PropertiesUtil.substituteProperty(propvalue, containerProperties));
+      }
     }
 
     loadExtraProperties();
@@ -244,24 +243,20 @@ public class CoreDescriptor {
     String filename = coreProperties.getProperty(CORE_PROPERTIES, DEFAULT_EXTERNAL_PROPERTIES_FILE);
     Path propertiesFile = instanceDir.resolve(filename);
     if (Files.exists(propertiesFile)) {
-      try (InputStream is = Files.newInputStream(propertiesFile)) {
+      try (Reader r = Files.newBufferedReader(propertiesFile, StandardCharsets.UTF_8)) {
         Properties externalProps = new Properties();
-        externalProps.load(new InputStreamReader(is, StandardCharsets.UTF_8));
+        externalProps.load(r);
         coreProperties.putAll(externalProps);
       } catch (IOException e) {
         String message =
-            String.format(
-                Locale.ROOT,
-                "Could not load properties from %s: %s:",
-                propertiesFile.toString(),
-                e.toString());
+            String.format(Locale.ROOT, "Could not load properties from %s: %s:", propertiesFile, e);
         throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, message);
       }
     }
   }
 
   /**
-   * Create the properties object used by resource loaders, etc, for property substitution. The
+   * Create the properties object used by resource loaders, etc., for property substitution. The
    * default solr properties are prefixed with 'solr.core.', so, e.g., 'name' becomes
    * 'solr.core.name'
    */
@@ -286,7 +281,7 @@ public class CoreDescriptor {
   }
 
   public static String checkPropertyIsNotEmpty(String value, String propName) {
-    if (StringUtils.isEmpty(value)) {
+    if (StrUtils.isNullOrEmpty(value)) {
       String message =
           String.format(Locale.ROOT, "Cannot create core with empty %s value", propName);
       throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, message);
