@@ -19,13 +19,6 @@ package org.apache.solr.handler.component;
 import com.carrotsearch.hppc.IntIntHashMap;
 import com.carrotsearch.hppc.cursors.IntIntCursor;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.Collections2;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.ImmutableSortedSet;
-import com.google.common.collect.ObjectArrays;
-import com.google.common.collect.Sets;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.lang.ref.WeakReference;
@@ -36,8 +29,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -48,8 +39,10 @@ import java.util.Objects;
 import java.util.Queue;
 import java.util.Set;
 import java.util.SortedSet;
+import java.util.TreeSet;
 import java.util.function.Consumer;
-import org.apache.commons.lang3.StringUtils;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.TokenStream;
 import org.apache.lucene.analysis.tokenattributes.CharTermAttribute;
@@ -72,6 +65,7 @@ import org.apache.lucene.util.BytesRefBuilder;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.QueryElevationParams;
 import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.DOMUtil;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
@@ -128,6 +122,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
    * configured order (so-called priority).
    */
   public static final String BOOSTED = "BOOSTED";
+
   /** Key to {@link SolrQueryRequest#getContext()} for a {@code Set<BytesRef>} of excluded IDs. */
   public static final String EXCLUDED = "EXCLUDED";
 
@@ -143,29 +138,35 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
 
   protected Analyzer queryAnalyzer;
   protected SchemaField uniqueKeyField;
+
   /**
    * @see QueryElevationParams#FORCE_ELEVATION
    */
   protected boolean forceElevation;
+
   /**
    * @see QueryElevationParams#USE_CONFIGURED_ELEVATED_ORDER
    */
   protected boolean useConfiguredElevatedOrder;
+
   /** If {@link #inform(SolrCore)} completed without error. */
   protected boolean initialized;
 
   private final Object LOCK = new Object(); // for cache*
+
   /**
    * Cached IndexReader associated with {@link #cacheElevationProvider}. Must be accessed under
    * lock.
    */
   private WeakReference<IndexReader> cacheIndexReader = NULL_REF;
+
   /**
    * Cached elevation provider. Must be accessed under lock. {@link
    * #handleConfigLoadingException(Exception)} has the lock when called and may access this if it
    * wishes to return a previous good result.
    */
   protected ElevationProvider cacheElevationProvider = null; // keep null
+
   /**
    * Cached version / timestamp of the data underlying {@link #cacheElevationProvider}. -1 means
    * unsupported. Must be accessed under lock.
@@ -335,8 +336,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
    *
    * @return The cached or loaded {@link ElevationProvider}.
    */
-  @VisibleForTesting
-  ElevationProvider getElevationProvider(IndexReader reader, SolrCore core) {
+  protected ElevationProvider getElevationProvider(IndexReader reader, SolrCore core) {
     synchronized (LOCK) {
       if (cacheElevationProvider != null && Objects.equals(cacheIndexReader.get(), reader)) {
         return cacheElevationProvider; // cache hit !
@@ -383,7 +383,8 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
    *
    * @return The loaded {@link ElevationProvider}; not null.
    */
-  private ElevationProvider loadElevationProvider(SolrCore core) throws IOException, SAXException {
+  protected ElevationProvider loadElevationProvider(SolrCore core)
+      throws IOException, SAXException {
     Document xmlDocument;
     try {
       xmlDocument = SafeXMLParsing.parseConfigXML(log, core.getResourceLoader(), configFileName);
@@ -573,13 +574,13 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
     SolrParams params = rb.req.getParams();
 
     String tagStr = params.get(QueryElevationParams.ELEVATE_EXCLUDE_TAGS);
-    if (StringUtils.isEmpty(tagStr)) {
+    if (StrUtils.isNullOrEmpty(tagStr)) {
       // the parameter that specifies tags for exclusion was not provided or had no value
       return;
     }
 
     List<String> excludeTags = StrUtils.splitSmart(tagStr, ',');
-    excludeTags.removeIf(s -> StringUtils.isBlank(s));
+    excludeTags.removeIf(s -> StrUtils.isBlank(s));
     if (excludeTags.isEmpty()) {
       // the parameter that specifies tags for exclusion was provided but the tag names were blank
       return;
@@ -919,7 +920,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
     elevationBuilder.addExcludedIds(
         excludedIds == null ? Collections.emptyList() : Arrays.asList(excludedIds));
     Map<ElevatingQuery, ElevationBuilder> elevationBuilderMap =
-        ImmutableMap.of(elevatingQuery, elevationBuilder);
+        Map.of(elevatingQuery, elevationBuilder);
     synchronized (LOCK) {
       cacheIndexReader = new WeakReference<>(reader);
       cacheElevationProvider = createElevationProvider(elevationBuilderMap);
@@ -1140,6 +1141,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
      * null</code>. The order is retained.
      */
     private LinkedHashSet<BytesRef> elevatedIds;
+
     /**
      * The ids of the excluded documents that should not appear in search results; can be <code>null
      * </code>.
@@ -1161,7 +1163,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
 
     public ElevationBuilder addExcludedIds(Collection<String> ids) {
       if (excludedIds == null) {
-        excludedIds = new HashSet<>(Math.max(10, ids.size()));
+        excludedIds = CollectionUtil.newHashSet(Math.max(10, ids.size()));
       }
       for (String id : ids) {
         excludedIds.add(toBytesRef(id));
@@ -1221,7 +1223,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
         includeQuery = EMPTY_QUERY;
         this.elevatedIds = Collections.emptySet();
       } else {
-        this.elevatedIds = ImmutableSet.copyOf(elevatedIds);
+        this.elevatedIds = Collections.unmodifiableSet(new LinkedHashSet<>(elevatedIds));
         BooleanQuery.Builder includeQueryBuilder = new BooleanQuery.Builder();
         for (BytesRef elevatedId : elevatedIds) {
           includeQueryBuilder.add(
@@ -1234,12 +1236,11 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
         this.excludedIds = Collections.emptySet();
         excludeQueries = null;
       } else {
-        this.excludedIds = ImmutableSet.copyOf(excludedIds);
-        List<TermQuery> excludeQueriesBuilder = new ArrayList<>(excludedIds.size());
-        for (BytesRef excludedId : excludedIds) {
-          excludeQueriesBuilder.add(new TermQuery(new Term(queryFieldName, excludedId)));
-        }
-        excludeQueries = excludeQueriesBuilder.toArray(new TermQuery[0]);
+        this.excludedIds = Collections.unmodifiableSet(new LinkedHashSet<>(excludedIds));
+        this.excludeQueries =
+            this.excludedIds.stream()
+                .map(excludedId -> new TermQuery(new Term(queryFieldName, excludedId)))
+                .toArray(TermQuery[]::new);
       }
     }
 
@@ -1265,15 +1266,13 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
         return this;
       }
       Set<BytesRef> elevatedIds =
-          ImmutableSet.<BytesRef>builder()
-              .addAll(this.elevatedIds)
-              .addAll(elevation.elevatedIds)
-              .build();
+          Stream.concat(this.elevatedIds.stream(), elevation.elevatedIds.stream())
+              .collect(Collectors.toCollection(LinkedHashSet::new));
       boolean overlappingElevatedIds =
           elevatedIds.size() != (this.elevatedIds.size() + elevation.elevatedIds.size());
       BooleanQuery.Builder includeQueryBuilder = new BooleanQuery.Builder();
       Set<BooleanClause> clauseSet =
-          (overlappingElevatedIds ? Sets.newHashSetWithExpectedSize(elevatedIds.size()) : null);
+          (overlappingElevatedIds ? CollectionUtil.newHashSet(elevatedIds.size()) : null);
       for (BooleanClause clause : this.includeQuery.clauses()) {
         if (!overlappingElevatedIds || clauseSet.add(clause)) {
           includeQueryBuilder.add(clause);
@@ -1285,10 +1284,8 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
         }
       }
       Set<BytesRef> excludedIds =
-          ImmutableSet.<BytesRef>builder()
-              .addAll(this.excludedIds)
-              .addAll(elevation.excludedIds)
-              .build();
+          Stream.concat(this.excludedIds.stream(), elevation.excludedIds.stream())
+              .collect(Collectors.toUnmodifiableSet());
       TermQuery[] excludeQueries;
       if (this.excludeQueries == null) {
         excludeQueries = elevation.excludeQueries;
@@ -1299,14 +1296,16 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
             excludedIds.size() != (this.excludedIds.size() + elevation.excludedIds.size());
         if (overlappingExcludedIds) {
           excludeQueries =
-              ImmutableSet.<TermQuery>builder()
-                  .add(this.excludeQueries)
-                  .add(elevation.excludeQueries)
-                  .build()
-                  .toArray(new TermQuery[0]);
+              Stream.concat(
+                      Arrays.stream(this.excludeQueries), Arrays.stream(elevation.excludeQueries))
+                  .distinct()
+                  .toArray(TermQuery[]::new);
         } else {
           excludeQueries =
-              ObjectArrays.concat(this.excludeQueries, elevation.excludeQueries, TermQuery.class);
+              Stream.concat(
+                      Arrays.stream(this.excludeQueries), Arrays.stream(elevation.excludeQueries))
+                  .distinct()
+                  .toArray(TermQuery[]::new);
         }
       }
       return new Elevation(elevatedIds, includeQueryBuilder.build(), excludedIds, excludeQueries);
@@ -1315,9 +1314,13 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
     @Override
     public String toString() {
       return "{elevatedIds="
-          + Collections2.transform(elevatedIds, BytesRef::utf8ToString)
+          + elevatedIds.stream()
+              .map(BytesRef::utf8ToString)
+              .collect(Collectors.toCollection(LinkedHashSet::new))
           + ", excludedIds="
-          + Collections2.transform(excludedIds, BytesRef::utf8ToString)
+          + excludedIds.stream()
+              .map(BytesRef::utf8ToString)
+              .collect(Collectors.toCollection(LinkedHashSet::new))
           + "}";
     }
   }
@@ -1558,7 +1561,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
       public Builder<E, M> addSubset(Collection<E> subset, M matchValue) {
         if (!subset.isEmpty()) {
           TrieSubsetMatcher.Node<E, M> node = root;
-          for (E e : ImmutableSortedSet.copyOf(subset)) {
+          for (E e : new TreeSet<>(subset)) {
             node = node.getOrCreateChild(e);
           }
           node.addMatchValue(matchValue);
@@ -1590,10 +1593,10 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
      * Returns an iterator over all the subsets that are contained by the provided set. The returned
      * iterator does not support removal.
      *
-     * @param set This set is copied to a new {@link ImmutableSortedSet} with natural ordering.
+     * @param set This set is copied to a new {@link SortedSet} with natural ordering.
      */
     public Iterator<M> findSubsetsMatching(Collection<E> set) {
-      return new MatchIterator(ImmutableSortedSet.copyOf(set));
+      return new MatchIterator(new TreeSet<>(set));
     }
 
     /** Trie node. */
@@ -1611,7 +1614,7 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
       /** Gets the child node for the provided element, or creates it if it does not exist. */
       Node<E, M> getOrCreateChild(E e) {
         if (children == null) {
-          children = new HashMap<>(4);
+          children = CollectionUtil.newHashMap(4);
         }
         Node<E, M> child = children.get(e);
         if (child == null) {
@@ -1652,12 +1655,12 @@ public class QueryElevationComponent extends SearchComponent implements SolrCore
        * memory usage and make it more efficient.
        */
       void trimAndMakeImmutable() {
-        if (children != null && !(children instanceof ImmutableMap)) {
+        if (children != null) {
           for (Node<E, M> child : children.values()) child.trimAndMakeImmutable();
-          children = ImmutableMap.copyOf(children);
+          children = Map.copyOf(children);
         }
-        if (matchValues != null && !(matchValues instanceof ImmutableList)) {
-          matchValues = ImmutableList.copyOf(matchValues);
+        if (matchValues != null) {
+          matchValues = List.copyOf(matchValues);
         }
       }
     }
