@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
-import org.apache.commons.io.IOUtils;
 import org.apache.solr.api.EndPoint;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.ConfigSetParams;
@@ -94,8 +93,7 @@ public class UploadConfigSetAPI extends ConfigSetAPIBase {
         String filePath = zipEntry.getName();
         filesToDelete.remove(filePath);
         if (!zipEntry.isDirectory()) {
-          configSetService.uploadFileToConfig(
-              configSetName, filePath, IOUtils.toByteArray(zis), true);
+          configSetService.uploadFileToConfig(configSetName, filePath, zis.readAllBytes(), true);
         }
       }
       if (!hasEntry) {
@@ -108,7 +106,10 @@ public class UploadConfigSetAPI extends ConfigSetAPIBase {
 
     // If the request is doing a full trusted overwrite of an untrusted configSet (overwrite=true,
     // cleanup=true), then trust the configSet.
-    if (cleanup && requestIsTrusted && overwritesExisting && !isCurrentlyTrusted(configSetName)) {
+    if (cleanup
+        && requestIsTrusted
+        && overwritesExisting
+        && !configSetService.isConfigSetTrusted(configSetName)) {
       Map<String, Object> metadata = Collections.singletonMap("trusted", true);
       configSetService.setConfigMetadata(configSetName, metadata);
     }
