@@ -23,13 +23,13 @@ import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.IsInstanceOf.instanceOf;
 
-import com.google.common.base.Throwables;
-import com.google.common.collect.ImmutableMap;
 import java.io.File;
 import java.io.FileOutputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -39,8 +39,6 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
 import java.util.regex.Pattern;
 import org.apache.commons.exec.OS;
-import org.apache.commons.io.FileUtils;
-import org.apache.lucene.util.IOUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.handler.admin.CollectionsHandler;
@@ -117,8 +115,8 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
     CoreContainer cores = init(CONFIGSETS_SOLR_XML);
 
     try {
-      SolrCore core1 = cores.create("core1", ImmutableMap.of("configSet", "minimal"));
-      SolrCore core2 = cores.create("core2", ImmutableMap.of("configSet", "minimal"));
+      SolrCore core1 = cores.create("core1", Map.of("configSet", "minimal"));
+      SolrCore core2 = cores.create("core2", Map.of("configSet", "minimal"));
 
       assertSame(core1.getLatestSchema(), core2.getLatestSchema());
 
@@ -132,7 +130,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
   public void testReloadSequential() throws Exception {
     final CoreContainer cc = init(CONFIGSETS_SOLR_XML);
     try {
-      cc.create("core1", ImmutableMap.of("configSet", "minimal"));
+      cc.create("core1", Map.of("configSet", "minimal"));
       cc.reload("core1");
       cc.reload("core1");
       cc.reload("core1");
@@ -159,7 +157,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
   @Test
   public void testReloadThreaded() throws Exception {
     final CoreContainer cc = init(CONFIGSETS_SOLR_XML);
-    cc.create("core1", ImmutableMap.of("configSet", "minimal"));
+    cc.create("core1", Map.of("configSet", "minimal"));
 
     List<Thread> threads = new ArrayList<>();
     int numThreads = 4;
@@ -192,7 +190,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
     @Override
     public void run() {
       try {
-        core = cc.create(coreName, ImmutableMap.of("configSet", "minimal"));
+        core = cc.create(coreName, Map.of("configSet", "minimal"));
       } catch (SolrException e) {
         String msg = e.getMessage();
         foundExpectedError =
@@ -249,13 +247,12 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
       // we didn't leave the record of trying to create this core around.
       // NOTE: unloading the core closes it too.
       cc.unload(testName, true, true, true);
-      cc.create(testName, ImmutableMap.of("configSet", "minimal"));
+      cc.create(testName, Map.of("configSet", "minimal"));
       // This call should fail with a different error because the core was
       // created successfully.
       SolrException thrown =
           expectThrows(
-              SolrException.class,
-              () -> cc.create(testName, ImmutableMap.of("configSet", "minimal")));
+              SolrException.class, () -> cc.create(testName, Map.of("configSet", "minimal")));
       assertTrue(
           "Should have 'already exists' error", thrown.getMessage().contains("already exists"));
 
@@ -274,7 +271,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
       assertEquals("There should not be cores", 0, cores.getCores().size());
 
       // add a new core
-      cores.create("core1", ImmutableMap.of("configSet", "minimal"));
+      cores.create("core1", Map.of("configSet", "minimal"));
 
       // assert one registered core
 
@@ -345,7 +342,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
       MatcherAssert.assertThat(cc.getCoreInitFailures().size(), is(0));
 
       // can we create the core now with a good config?
-      SolrCore core = cc.create("badcore", ImmutableMap.of("configSet", "minimal"));
+      SolrCore core = cc.create("badcore", Map.of("configSet", "minimal"));
       MatcherAssert.assertThat(core, not(nullValue()));
 
     } finally {
@@ -361,7 +358,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
       ClassLoader baseLoader = SolrResourceLoader.class.getClassLoader();
       assertSame(baseLoader, sharedLoader.getParent());
 
-      SolrCore core1 = cc.create("core1", ImmutableMap.of("configSet", "minimal"));
+      SolrCore core1 = cc.create("core1", Map.of("configSet", "minimal"));
       ClassLoader coreLoader = core1.getResourceLoader().getClassLoader();
       assertSame(sharedLoader, coreLoader.getParent());
 
@@ -493,7 +490,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
 
     final CoreContainer cores = init(CONFIGSETS_SOLR_XML);
     try {
-      Path solrInstallDir = cores.getConfig().getSolrInstallDir();
+      Path solrInstallDir = NodeConfig.getSolrInstallDir();
       assertTrue(
           "solrInstallDir was " + solrInstallDir,
           solrInstallDir != null && installDirPath.toString().equals(solrInstallDir.toString()));
@@ -773,6 +770,45 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
     }
   }
 
+  @Test
+  public void testDefaultCoresLocator() throws Exception {
+    String solrXml = "<?xml version=\"1.0\" encoding=\"UTF-8\" ?><solr></solr>";
+    CoreContainer cc = init(solrXml);
+    try {
+      assertTrue(cc.getCoresLocator() instanceof CorePropertiesLocator);
+    } finally {
+      cc.shutdown();
+    }
+  }
+
+  @Test
+  public void testCustomCoresLocator() throws Exception {
+    String solrXml =
+        "<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n"
+            + "<solr>\n"
+            + "<str name=\"coresLocator\">org.apache.solr.core.TestCoreContainer$CustomCoresLocator</str>\n"
+            + "</solr>";
+    CoreContainer cc = init(solrXml);
+    try {
+      assertTrue(cc.getCoresLocator() instanceof CustomCoresLocator);
+      assertSame(cc.getNodeConfig(), ((CustomCoresLocator) cc.getCoresLocator()).getNodeConfig());
+    } finally {
+      cc.shutdown();
+    }
+  }
+
+  public static class CustomCoresLocator extends MockCoresLocator {
+    private final NodeConfig nodeConfig;
+
+    public CustomCoresLocator(NodeConfig nodeConfig) {
+      this.nodeConfig = nodeConfig;
+    }
+
+    public NodeConfig getNodeConfig() {
+      return nodeConfig;
+    }
+  }
+
   private static class MockCoresLocator implements CoresLocator {
 
     List<CoreDescriptor> cores = new ArrayList<>();
@@ -801,6 +837,29 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
     @Override
     public List<CoreDescriptor> discover(CoreContainer cc) {
       return cores;
+    }
+
+    @Override
+    public CoreDescriptor reload(CoreDescriptor cd, CoreContainer cc) {
+      return cd;
+    }
+  }
+
+  @Test
+  public void testCustomCoreSorter() throws Exception {
+    String solrXml =
+        "<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n"
+            + "<solr>\n"
+            + "<str name=\"coreSorter\">org.apache.solr.core.TestCoreContainer$CustomCoreSorter</str>\n"
+            + "</solr>";
+    CoreContainer cc = init(solrXml);
+    assertTrue(cc.getCoreSorter() instanceof CustomCoreSorter);
+    cc.shutdown();
+  }
+
+  public static class CustomCoreSorter extends CoreSorter {
+    public CustomCoreSorter(CoreContainer cc) {
+      super(cc);
     }
   }
 
@@ -832,9 +891,9 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
         expectThrows(
             SolrException.class,
             () -> {
-              cc.create("bogus", ImmutableMap.of("configSet", "bogus_path"));
+              cc.create("bogus", Map.of("configSet", "bogus_path"));
             });
-    Throwable rootCause = Throwables.getRootCause(thrown);
+    Throwable rootCause = SolrException.getRootCause(thrown);
     assertTrue(
         "init exception doesn't mention bogus dir: " + rootCause.getMessage(),
         0 < rootCause.getMessage().indexOf("bogus_path"));
@@ -864,7 +923,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
               SolrCore c = cc.getCore("bogus");
             });
     assertEquals(500, thrown.code());
-    String cause = Throwables.getRootCause(thrown).getMessage();
+    String cause = SolrException.getRootCause(thrown).getMessage();
     assertTrue(
         "getCore() ex cause doesn't mention init fail: " + cause, 0 < cause.indexOf("bogus_path"));
 
@@ -929,13 +988,17 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
 
     // -----
     // "fix" the bad collection
-    FileUtils.copyFile(
-        getFile("solr/collection1/conf/solrconfig-defaults.xml"),
-        FileUtils.getFile(cc.getSolrHome(), "col_bad", "conf", "solrconfig.xml"));
-    FileUtils.copyFile(
-        getFile("solr/collection1/conf/schema-minimal.xml"),
-        FileUtils.getFile(cc.getSolrHome(), "col_bad", "conf", "schema.xml"));
-    cc.create("col_bad", ImmutableMap.of());
+    Path confDir = Path.of(cc.getSolrHome(), "col_bad", "conf");
+    Files.createDirectories(confDir);
+    Files.copy(
+        getFile("solr/collection1/conf/solrconfig-defaults.xml").toPath(),
+        confDir.resolve("solrconfig.xml"),
+        StandardCopyOption.REPLACE_EXISTING);
+    Files.copy(
+        getFile("solr/collection1/conf/schema-minimal.xml").toPath(),
+        confDir.resolve("schema.xml"),
+        StandardCopyOption.REPLACE_EXISTING);
+    cc.create("col_bad", Map.of());
 
     // check that we have the cores we expect
     cores = cc.getLoadedCoreNames();
@@ -958,7 +1021,7 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
         expectThrows(
             SolrException.class,
             () -> {
-              cc.create("bogus", ImmutableMap.of("configSet", "bogus_path"));
+              cc.create("bogus", Map.of("configSet", "bogus_path"));
             });
     assertTrue(
         "init exception doesn't mention bogus dir: " + thrown.getCause().getCause().getMessage(),
@@ -1000,10 +1063,10 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
 
     final long col_bad_old_start = getCoreStartTime(cc, "col_bad");
 
-    FileUtils.write(
-        FileUtils.getFile(cc.getSolrHome(), "col_bad", "conf", "solrconfig.xml"),
+    Files.writeString(
+        Path.of(cc.getSolrHome(), "col_bad", "conf", "solrconfig.xml"),
         "This is giberish, not valid XML <",
-        IOUtils.UTF_8);
+        StandardCharsets.UTF_8);
 
     ignoreException(Pattern.quote("SAX"));
     thrown =
@@ -1048,9 +1111,10 @@ public class TestCoreContainer extends SolrTestCaseJ4 {
 
     // ----
     // fix col_bad's config (again) and RELOAD to fix failure
-    FileUtils.copyFile(
-        getFile("solr/collection1/conf/solrconfig-defaults.xml"),
-        FileUtils.getFile(cc.getSolrHome(), "col_bad", "conf", "solrconfig.xml"));
+    Files.copy(
+        getFile("solr/collection1/conf/solrconfig-defaults.xml").toPath(),
+        confDir.resolve("solrconfig.xml"),
+        StandardCopyOption.REPLACE_EXISTING);
     cc.reload("col_bad");
 
     assertTrue(
